# mixbox

./: LICENSE  README.md  mixbox.h
Samples~/SamplesBuiltin/Materials/: MixboxSampleMaterial.mat
Samples~/SamplesHDRP/Scenes/: Scene.unity
Samples~/SamplesHDRP/Shaders/: MixboxSampleHDRPShaderGraph.shadergraph
Samples~/SamplesURP/Materials/: MixboxSampleShaderGraphMaterial.mat  MixboxSampleURPShaderMaterial.mat
ShaderGraph/: MixboxLerp.shadersubgraph
ShaderGraph/CustomFunctions/: MixboxFunctions.hlsl
c-cpp/: README.md  mixbox.h
cpp/: mixbox.c  mixbox.cpp
csharp/: Mixbox.cs  Mixbox.csproj  README.md
csharp/examples/: HelloMixbox.cs  HelloMixbox.csproj
godot/: README.md
godot/addons/mixbox/: mixbox.gd  (+5 more)
java/: README.md  build.bat  pom.xml
java/examples/: HelloMixbox.bat  HelloMixbox.java
javascript/: README.md  mixbox.esm.js  mixbox.js
javascript/examples/: canvas.html  gradients.html  gradients.js  hello.html  mixer.html  mixer.js  mountains.html  mountains.js  p5js.html  palette.html  palette.js  splash.html  svg.html  threejs.html
lua/: LibDeflate.lua  README.md  mixbox.lua
lua/examples/: hello.lua
python/: README.md  mixbox.py
python/examples/: blender.py  hello.py  npcv.py  opengl.py  pillow.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
shaders/: README.md  mixbox.glsl  mixbox.hlsl  mixbox.metal  mixbox.osl
unity/: LICENSE.md  README.md  package.json
unity/Documentation~/: README.md
unity/Runtime/: Mixbox.cs  Scrtwpns.Mixbox.asmdef
unity/ShaderLibrary/: Mixbox.cginc  Mixbox.hlsl
webgl/: README.md  example.html
(+7 files in other folders)
